Added support for rewriting package.json to match the configuration

--- a/package.json
+++ b/package.json
@@ -1,55 +1,55 @@
 {
-  "name": "generator-mean2starter",
-  "version": "0.0.0",
-  "description": "A yeoman generator that creates a Node/Express/Mongo/Angular2 starter framework for applications and Docker-based microservices",
-  "homepage": "",
-  "author": {
-    "name": "Andrew Marcus",
-    "email": "amarcus@asymmetrik.com",
-    "url": "http://asymmetrik.com"
-  },
-  "files": [
-    "generators"
-  ],
-  "main": "generators/index.js",
-  "keywords": [
-    "mongo",
-    "node",
-    "express",
-    "angular2",
-    "docker",
-    "yeoman-generator"
-  ],
-  "dependencies": {
-    "chalk": "^1.0.0",
-    "q": "^1.4.1",
-    "yeoman-generator": "^0.23.0",
-    "yosay": "^1.0.0"
-  },
-  "devDependencies": {
-    "yeoman-test": "^1.0.0",
-    "yeoman-assert": "^2.0.0",
-    "eslint": "^3.1.1",
-    "eslint-config-xo-space": "^0.15.0",
-    "gulp": "^3.9.0",
-    "gulp-eslint": "^3.0.1",
-    "gulp-exclude-gitignore": "^1.0.0",
-    "gulp-line-ending-corrector": "^1.0.1",
-    "gulp-istanbul": "^1.0.0",
-    "gulp-mocha": "^3.0.1",
-    "gulp-plumber": "^1.0.0",
-    "gulp-nsp": "^2.1.0"
-  },
-  "eslintConfig": {
-    "extends": "xo-space",
-    "env": {
-      "mocha": true
-    }
-  },
-  "repository": "asymmetrik/generator-mean-2-starter",
-  "scripts": {
-    "prepublish": "gulp prepublish",
-    "test": "gulp"
-  },
-  "license": "MIT"
+	"name": "generator-mean2starter",
+	"version": "0.0.0",
+	"description": "A yeoman generator that creates a Node/Express/Mongo/Angular2 starter framework for applications and Docker-based microservices",
+	"homepage": "",
+	"author": {
+		"name": "Andrew Marcus",
+		"email": "amarcus@asymmetrik.com",
+		"url": "http://asymmetrik.com"
+	},
+	"repository": "asymmetrik/generator-mean-2-starter",
+	"scripts": {
+		"prepublish": "gulp prepublish",
+		"test": "gulp"
+	},
+	"license": "MIT",
+	"files": [
+		"generators"
+	],
+	"main": "generators/index.js",
+	"keywords": [
+		"mongo",
+		"node",
+		"express",
+		"angular2",
+		"docker",
+		"yeoman-generator"
+	],
+	"dependencies": {
+		"chalk": "^1.0.0",
+		"q": "^1.4.1",
+		"yeoman-generator": "^0.23.0",
+		"yosay": "^1.0.0"
+	},
+	"devDependencies": {
+		"yeoman-test": "^1.0.0",
+		"yeoman-assert": "^2.0.0",
+		"eslint": "^3.1.1",
+		"eslint-config-xo-space": "^0.15.0",
+		"gulp": "^3.9.0",
+		"gulp-eslint": "^3.0.1",
+		"gulp-exclude-gitignore": "^1.0.0",
+		"gulp-line-ending-corrector": "^1.0.1",
+		"gulp-istanbul": "^1.0.0",
+		"gulp-mocha": "^3.0.1",
+		"gulp-plumber": "^1.0.0",
+		"gulp-nsp": "^2.1.0"
+	},
+	"eslintConfig": {
+		"extends": "xo-space",
+		"env": {
+			"mocha": true
+		}
+	}
 }
