--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,18 @@
+# Editor configuration, see http://editorconfig.org
 root = true
 
 [*]
-indent_style = space
-indent_size = 2
 charset = utf-8
-trim_trailing_whitespace = true
+end_of_line = lf
+
+indent_style = tab
+tab_width = 4
+
 insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.html]
+tab_width = 2
 
 [*.md]
 trim_trailing_whitespace = false
