--- a/.editorconfig
+++ b/.editorconfig
@@ -14,5 +14,9 @@ trim_trailing_whitespace = true
 [*.html]
 tab_width = 2
 
+{*.yml]
+indent_style = space
+tab_width = 2
+
 [*.md]
 trim_trailing_whitespace = false
